--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 </head>
+
 <script>
     function encryptVig(){
         var plaintext = document.getElementById("pt").value.toUpperCase();
@@ -110,26 +115,75 @@
         document.getElementById("hasil-decrypt").value = chiperText.join("");
     }
 </script>
-<body>
-    <!-- <form action=""> -->
-        <label for="pt">plaintext</label>
-        <input type="text" name="plaintext" id="pt">
-        <label for="key">key</label>
-        <input type="text" name="key" id="key">
-        <button onclick="encryptVig();">Encrypt</button>
-        <label for="hasil">hasil encrypt</label>
-        <input type="text" id="hasil-encrypt" disabled>
-    <!-- </form> -->
-    <br>
-    <!-- <form action=""> -->
-        <label for="pt">chipertext</label>
-        <input type="text" name="chipertext" id="ct">
-        <label for="key">key</label>
-        <input type="text" name="key" id="keychi">
-        <button onclick="decryptVig();">Decrypt</button>
-        <label for="">Hasil Decyrpt</label>
-        <input type="text" id="hasil-decrypt" disabled>
-    <!-- </form> -->
+<body style="background-color: aliceblue;">
+    <div class="container">
+        <div class="row">
+            <!-- ENCRYPT -->
+            <div class="col-sm-6 form-group" style="padding-right: 2%;">
+                <div class="row">
+                    <h2>Plaintext</h2>
+                    <textarea class="form-control" rows="5" id="pt"></textarea>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label for="key">Key</label>
+                    </div>
+                    <div class="col-sm-9">
+                        <input type="text" name="key" id="key">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label for="hasil">Hasil Encrypt</label>
+                    </div>
+                    <div class="col-sm-9">
+                        <!-- <input type="text" id="hasil-encrypt" disabled> -->
+                        <textarea class="form-control" rows="5" id="hasil-encrypt"></textarea>
+                    </div>
+                </div>
+                <br>
+                <div class="text-center col-sm-12">
+                    <button type="button" button onclick="encryptVig();" class="btn btn-outline-primary">Encrypt</button>
+                </div>
+            </div>
+
+            <!-- DECRYPT -->
+            <div class="col-sm-6 form-group" style="padding-left: 2%;">
+                <div class="row">
+                    <h2>ChiperText</h2>
+                    <textarea class="form-control" rows="5" id="ct"></textarea>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label for="key">Key</label>
+                    </div>
+                    <div class="col-sm-9">
+                        <input type="text"  rows="5" name="key" id="keychi">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <label for="">Hasil Decyrpt</label>
+
+                    </div> 
+                    <div class="col-sm-9">
+                        <!-- <input type="text" id="hasil-decrypt" disabled> -->
+                        <textarea class="form-control" rows="5" id="hasil-decrypt"></textarea>
+                    </div>
+                </div>
+                <br>
+                    <div class="text-center col-sm-12">
+                        <button type="button" button onclick="decryptVig();" class="btn btn-outline-primary">Decrypt</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
 </body>
 
 </html>
