--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         var keyNum = [];
         var chiperNum = [];
         var chiperText = [];
-        var arrChar="ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-        var arrNum=[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,
+        var arrChar = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+        var arrNum = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,
                     20,21,22,23,24,25,26];
         // Mencari value angka setiap huruf dari plaint text
         for(i = 0; i < plaintext.length; i++){
@@ -66,7 +66,7 @@
     }
 
     function decryptVig(){
-        var plaintext = document.getElementById("ct").value.toUpperCase();
+        var chipertext = document.getElementById("ct").value.toUpperCase();
         var key = document.getElementById("keychi").value.toUpperCase();
         var ptNum = [];
         var keyNum = [];
@@ -76,9 +76,9 @@
         var arrNum=[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,
                     20,21,22,23,24,25,26];
         // Mencari value angka setiap huruf dari plaint text
-        for(i = 0; i < plaintext.length; i++){
+        for(i = 0; i < chipertext.length; i++){
             for(j = 0; j < arrChar.length; j++){
-                if(plaintext[i] == arrChar[j]){
+                if(chipertext[i] == arrChar[j]){
                     ptNum.push(arrNum[j]);
                 }
             }  
@@ -140,7 +140,7 @@
                     </div>
                     <div class="col-sm-9">
                         <!-- <input type="text" id="hasil-encrypt" disabled> -->
-                        <textarea class="form-control" rows="5" id="hasil-encrypt"></textarea>
+                        <textarea class="form-control" rows="5" id="hasil-encrypt" disabled></textarea>
                     </div>
                 </div>
                 <br>
@@ -170,9 +170,8 @@
                         <label for="">Hasil Decyrpt</label>
 
                     </div> 
-                    <div class="col-sm-9">
-                        <!-- <input type="text" id="hasil-decrypt" disabled> -->
-                        <textarea class="form-control" rows="5" id="hasil-decrypt"></textarea>
+                    <div class="col-sm-9">                    
+                        <textarea class="form-control" rows="5" id="hasil-decrypt" disabled></textarea>
                     </div>
                 </div>
                 <br>
